--- a/Test.Angular.SignalR.Async/ClientApp/src/app/settings/settings.css
+++ b/Test.Angular.SignalR.Async/ClientApp/src/app/settings/settings.css
@@ -1,9 +1,3 @@
-.container {
-  padding: 0 0 0 0;
-  margin-right: 0;
-  margin-top: 10px;
-}
-
 .box {
   display: flex;
   align-items: center;
@@ -21,7 +15,7 @@
 }
 
 .bold-font {
-  font-weight: bold;
+  font-weight: bold;  
 }
 
 .error {
@@ -34,4 +28,8 @@
 
 .italic-font {
   font-style: italic;
+}
+
+.margind-top {
+  margin-top: 5px;
 }
