Add AfterPay payments

--- a/Test.Angular.SignalR/ClientApp/src/app/home/home.html
+++ b/Test.Angular.SignalR/ClientApp/src/app/home/home.html
@@ -28,6 +28,7 @@
   <div class="col-md-12 margind-top">
     <button class="btn btn-primary normal-button" [disabled]='!transactionForm.valid' (click)="onTransaction('00')">EFTPOS</button>
     <button class="btn btn-primary normal-button" [disabled]='!transactionForm.valid' (click)="onTransaction('67')">Oxipay</button>
+    <button class="btn btn-primary normal-button" [disabled]='!transactionForm.valid' (click)="onTransaction('65')">AfterPay</button>
   </div>
 </form>
 
