Add ZipMoney payments

--- a/Test.Angular.SignalR/ClientApp/src/app/home/home.html
+++ b/Test.Angular.SignalR/ClientApp/src/app/home/home.html
@@ -29,6 +29,7 @@
     <button class="btn btn-primary normal-button" [disabled]='!transactionForm.valid' (click)="onTransaction('00')">EFTPOS</button>
     <button class="btn btn-primary normal-button" [disabled]='!transactionForm.valid' (click)="onTransaction('67')">Oxipay</button>
     <button class="btn btn-primary normal-button" [disabled]='!transactionForm.valid' (click)="onTransaction('65')">AfterPay</button>
+    <button class="btn btn-primary normal-button" [disabled]='!transactionForm.valid' (click)="onTransaction('89')">ZipMoney</button>
   </div>
 </form>
 
