--- a/Test.Angular.SignalR/ClientApp/src/app/home/home.html
+++ b/Test.Angular.SignalR/ClientApp/src/app/home/home.html
@@ -27,8 +27,9 @@
   </div>
   <div class="col-md-12 margind-top">
     <button class="btn btn-primary normal-button" [disabled]='!transactionForm.valid' (click)="onTransaction('00')">EFTPOS</button>
-    <button class="btn btn-primary normal-button" [disabled]='!transactionForm.valid' (click)="onTransaction('67')">Oxipay</button>
     <button class="btn btn-primary normal-button" [disabled]='!transactionForm.valid' (click)="onTransaction('65')">AfterPay</button>
+    <button class="btn btn-primary normal-button" [disabled]='!transactionForm.valid' (click)="onTransaction('66')">Alipay</button>
+    <button class="btn btn-primary normal-button" [disabled]='!transactionForm.valid' (click)="onTransaction('67')">Oxipay</button>
     <button class="btn btn-primary normal-button" [disabled]='!transactionForm.valid' (click)="onTransaction('89')">ZipMoney</button>
   </div>
 </form>
